dz/12-k8s-05/manifest/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-multitool
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
