dz/12-k8s-05/manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-nginx
  name: frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
