dz/12-k8s-05/manifest/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool
  ports:
  - name: for-multitool
    port: 80
    targetPort: 80
