dz/12-k8s-05/manifest/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: nginx
  ports:
  - name: for-nginx
    port: 80
    targetPort: 80
